# kcc

./:  test  .clang-format  .clang-tidy  .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md  not-support.md
cmake/: check.cmake  clang-tidy.cmake  compiler-options.cmake  format.cmake  sanitizers.cmake
example/: chinese.c
include/: builtin.h
src/: ast.cpp  ast.h  calc.cpp  calc.h  code_gen.cpp  code_gen.h  code_gen_expr.cpp  code_gen_stmt.cpp  cpp.cpp  cpp.h  debug_info.cpp  debug_info.h  dict.cpp  dict.h  encoding.cpp  encoding.h  error.cpp  error.h  json_gen.cpp  json_gen.h  kcc.cpp  lex.cpp  lex.h  link.cpp  link.h  llvm_common.cpp  llvm_common.h  location.cpp  location.h  main.cpp  memory_pool.h  obj_gen.cpp  obj_gen.h  opt.cpp  opt.h  parse.cpp  parse.h  parse_decl.cpp  parse_expr.cpp  parse_init.cpp  (+12 more)
test/: add.c  align.c  array.c  bitop.c  cond.c  control.c  decl.c  extern.c  float.c  function.c  generic.c  global.c  header.c  initializer.c  lex.c  literal.c  logical.c  macro.c  number.c  sizeof.c  stmtexpr.c  struct.c  struct_incomp.c  test.c  test.html  test.i  test.txt  type.c  union.c  varargs.c
test/dev/: api  standard.cpp  standard.ll  test.c  test.html  test.i  test.ll  test.s  test.txt
test/libfirm/: Makefile
test/libfirm/ir/be/mips/: mips_nodes_attr.c
test/libfirm/ir/be/riscv/: riscv_nodes_attr.c
test/libfirm/ir/common/: debugger.c
test/lua/: makefile
test/lua/testes/: all.lua
test/sqlite/: run-speed-test.sh  shell.c  speedtest1.c  sqlite3.h
test/usual/: add.c  align.c  arith.c  array.c  assign.c  bitfield.c  bitop.c  cast.c  comp.c  cond.c  constexpr.c  control.c  conversion.c  decl.c  enum.c  extern.c  float.c  funcargs.c  function.c  generic.c  global.c  header.c  import.c  initializer.c  int.c  iso646.c  lex.c  line.c  literal.c  logical.c  loop.c  macro.c  macro1.h  noreturn.c  number.c  pointer.c  rel.c  scope.c  sizeof.c  staticassert.c  (+10 more)
